--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
+    "auth": "graph auth",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ anudit/binance-account-bound-token",
     "create-local": "graph create --node http://localhost:8020/ anudit/binance-account-bound-token",
     "remove-local": "graph remove --node http://localhost:8020/ anudit/binance-account-bound-token",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 anudit/binance-account-bound-token"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.29.0",
-    "@graphprotocol/graph-ts": "0.26.0"
+    "@graphprotocol/graph-cli": "0.36.1",
+    "@graphprotocol/graph-ts": "0.29.0"
   }
 }
